# discord_bot

./: .gitignore  AGENTS.md  Cargo.toml  Containerfile  Dockerfile  README.md  compose.yml  flake.nix  rust-toolchain.toml  sample.env  testing.http  watch.py
.zed/: settings.json
discord_bot/: Cargo.toml
discord_bot/assets/: tailwind.css
discord_bot/modpack/: .packwizignore  index.toml  pack.toml
discord_bot/modpack/config/: BaubleyHeartCanisters.cfg  InvTweaks.cfg  abyssalcraft.cfg  astralsorcery.cfg  brokenwings.cfg  chiselsandbits.cfg  chiselsandbits_clipboard.cfg  erebus.cfg  ftbbackups.cfg  furnaceoverhaul.cfg  magneticraft.cfg  tweakersconstruct.cfg  twilightforest.cfg
discord_bot/modpack/config/AppliedEnergistics2/: AppliedEnergistics2.cfg
discord_bot/modpack/config/CustomMainMenu/: Content.json  Content_small.json
discord_bot/modpack/config/InvTweaks/: InvTweaks.cfg
discord_bot/modpack/config/apotheosis/: enchantability.cfg
discord_bot/modpack/config/betterquesting/: DefaultLoot.json  DefaultQuests.json
discord_bot/modpack/config/brandon3055/: DraconicEvolution.cfg
discord_bot/modpack/config/enderio/: enderiomachines.cfg
discord_bot/modpack/config/esm/: entity_ai.json  epicsiegemod.cfg
discord_bot/modpack/config/opencomputers/: settings.conf
discord_bot/modpack/config/solarflux/: panels.hlc
discord_bot/modpack/config/unidict/: UniDict.cfg
discord_bot/modpack/mods/: better-questing-triggerer.pw.toml  bio-library.pw.toml  bisecthosting-server-integration-menu-forge.pw.toml  compacter.pw.toml  ender-io-endergy.pw.toml  ender-io.pw.toml  endertweaker.pw.toml  knob-control.pw.toml  mapmakers-gadgets.pw.toml  moo-fluids.pw.toml  nofog.pw.toml  overloaded.pw.toml  riteclicker-mod.pw.toml  simple-sponge.pw.toml  teslafied.pw.toml  thermal-solars.pw.toml  tinkers-reforged.pw.toml
discord_bot/modpack/plugins/: essentialx.pw.toml
discord_bot/modpack/resourcepacks/: ozone-resources.pw.toml  purebdcraft-32-ozone-patch.pw.toml  purebdcraft-64-ozone-patch.pw.toml
discord_bot/modpack/scripts/all_modes/: all_JEI.zs  all_chisel.zs  all_combination.zs  all_compression.zs  all_extended.zs  all_furnace.zs  all_industrial.zs  all_loot.zs  all_pneumatic.zs  all_recipe_fixes.zs  all_tconstruct.zs  all_thermal.zs  tier2_armor.zs  tier3_armor.zs  tier5_armor.zs
discord_bot/modpack/scripts/contenttweaker/: general_additions.zs
discord_bot/modpack/scripts/kappa/: kappa_3x3.zs  kappa_5x5.zs  kappa_aa.zs  kappa_bm.zs  kappa_botania.zs  kappa_combination.zs  kappa_ender_crafter.zs  kappa_enderio.zs  kappa_immersive.zs  kappa_mekanism.zs  kappa_nuke.zs  kappa_recipes.zs  kappa_sorcery.zs  kappa_tconstruct.zs  kappa_testers.zs
discord_bot/modpack/scripts/mythic/: mythic_pneumaticcraft.zs  mythic_replacements.zs
discord_bot/modpack/scripts/normal/: normal_9x9.zs
discord_bot/modpack/shaderpacks/: makeup-ultra-fast-shader.pw.toml
discord_bot/src/: app.rs  discord.rs  discord_utils.rs  error.rs  handlers.rs  lib.rs  main.rs  models.rs  oci.rs  queries.rs  routes.rs  state.rs  terraria.rs
discord_bot/src/components/: mod.rs  navbar.rs
discord_bot/src/server/: discord.rs  minecraft.rs  mod.rs  models.rs  state.rs  terraria.rs
discord_bot/src/views/: home.rs  logs.rs  mod.rs
game_manager/: Cargo.toml
game_manager/src/: main.rs
lib/: Cargo.toml
lib/src/: lib.rs
mc_discord_bot/: Cargo.toml
mc_discord_bot/assets/: index.html
mc_discord_bot/modpack/: .packwizignore  index.toml  pack.toml  readme.md
mc_discord_bot/modpack/config/: DimensionalEdibles.cfg  ExtraPlanets.cfg  bhmenu.cfg  embers.cfg  epicsiegemod.cfg  extendedcrafting.cfg  foamfix.cfg  ftbutilities.cfg  moofluids.cfg  packmode.cfg  randompatches.cfg  simplesponge.cfg  splash.properties  tombstone.cfg
mc_discord_bot/modpack/config/AppliedEnergistics2/: CustomRecipes.cfg  items.csv
mc_discord_bot/modpack/config/ChanceCubes/: global_rewards.json
mc_discord_bot/modpack/config/Knob Control/: Mob Drops Modular.cfg
mc_discord_bot/modpack/config/ProjectE/: pregenerated_emc.json
mc_discord_bot/modpack/config/agricraft/: config.cfg
mc_discord_bot/modpack/config/apotheosis/: enchantments.cfg  names.cfg
mc_discord_bot/modpack/config/astralsorcery/: amulet_enchantments.cfg
mc_discord_bot/modpack/config/enderio/: enderio.cfg
mc_discord_bot/modpack/config/jei/: itemBlacklist.cfg  worldSettings.cfg
mc_discord_bot/modpack/config/mputils/: changelog.txt
mc_discord_bot/modpack/config/netherex/: netherex.cfg
mc_discord_bot/modpack/config/overloaded/: compressed.json
mc_discord_bot/modpack/mods/: ad-astra-giselle-addon.pw.toml  additional-resources.pw.toml  ae2-extended-life.pw.toml  aerial-hell.pw.toml  aethersteel-tweaks.pw.toml  aethersteel.pw.toml  appliede.pw.toml  audio-death.pw.toml  avaritia-complement.pw.toml  baritone.pw.toml  better-than-bunnies.pw.toml  better-than-llamas.pw.toml  bisecthosting-server-integration-menu-forge.pw.toml  blaze-gear.pw.toml  botania-garden-of-glass.pw.toml  client-tweaks.pw.toml  controlling.pw.toml  copy-paste.pw.toml  crafttweaker.pw.toml  create-teleporters.pw.toml  createtweaker.pw.toml  creeperhost-minetogether.pw.toml  creeperhost-presents-soul-shards.pw.toml  crossroads-mc.pw.toml  cucumber.pw.toml  cumulus.pw.toml  discordsuite.pw.toml  draconic-evolution.pw.toml  electrodynamics.pw.toml  embers-rekindled.pw.toml  enderman-evolution.pw.toml  energized-power.pw.toml  epic-siege-mod.pw.toml  essential-mod.pw.toml  essentials.pw.toml  extraplanets.pw.toml  extreme-reactors.pw.toml  factorium.pw.toml  functional-armor-trim.pw.toml  galacticrafttweaker.pw.toml  (+55 more)
mc_discord_bot/modpack/plugins/: essentialx.toml  luckperms.pw.toml  powerranks.pw.toml
mc_discord_bot/modpack/resourcepacks/: purebdcraft-128-ozone-patch.pw.toml  purebdcraft-128.pw.toml  purebdcraft-32-ozone-patch.pw.toml  purebdcraft-32.pw.toml  purebdcraft-64-ozone-patch.pw.toml  purebdcraft-64.pw.toml
mc_discord_bot/modpack/shaderpacks/: makeup.pw.toml
mc_discord_bot/src/: commands.rs  discord_utils.rs  handlers.rs  main.rs  routes.rs  utils.rs
modpack/: .gitattributes  (+2 more)
(+272 files in other folders)
