[package]
name = "mc-discord-bot"
version = "0.1.0"
authors = ["Collin Diekvoss <collin@diekvoss.com>"]
edition = "2021"
repository = "https://github.com/toyvo/mc-discord-bot"

[dependencies]
axum = "0"
bytes = "1"
ed25519-dalek = "2"
http-body-util = "0"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0", features = ["full"] }
mime = "0"
rand = "0"
reqwest = { version = "0", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serenity = { version = "0", features = ["interactions_endpoint"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0", features = ["trace"] }
tracing = "0"
tracing-subscriber = { version = "0", features = ["env-filter"] }

[dev-dependencies]
tower = { version = "0", features = ["util"] }
