[package]
name = "discord_bot"
version = "0.1.0"
authors = ["Collin Diekvoss <collin@diekvoss.com>"]
edition = "2021"
repository = "https://github.com/toyvo/discord_bot"

[features]
db = []
watchers = ["db"]


[dependencies]
anyhow = "1"
axum = "0"
axum-extra = { version = "0", features = ["cookie-signed", "typed-header"] }
bytes = "1"
chrono = "0.4.38"
croner = "2"
dioxus = "0"
dioxus-ssr = "0"
ed25519-dalek = "2"
http-body-util = "0"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0", features = ["full"] }
mime = "0"
oxford_join = "0.2.10"
rand = "0"
rcon = { version = "0", features = ["rt-tokio"] }
regex = "1"
reqwest = { version = "0", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serenity = { version = "0", features = ["interactions_endpoint"] }
surrealdb = "2"
time = { version = "0", features = ["macros", "serde"] }
tokio = { version = "1", features = ["full"] }
toml = "0"
tower = { version = "0", features = ["full"] }
tower-http = { version = "0", features = ["full"] }
tracing = "0"
tracing-subscriber = { version = "0", features = ["env-filter"] }
url = "2"
uuid = { version = "1", features = ["v4"] }
