[package]
name = "discord_bot"
version = "0.1.0"
authors = ["Collin Diekvoss <Collin@Diekvoss.com>"]
edition = "2024"
repository = "https://github.com/toyvo/discord_bot"

[package.metadata.i18n]
available-locales = ["en"]
default-locale = "en"
load-path = "locales"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
axum = { version = "0", optional = true }
axum-extra = { version = "0.9", features = ["cookie", "cookie-signed", "typed-header"], optional = true }
chrono = { version = "0", features = ["rkyv"] }
dioxus = { version = "0.7.0", features = ["router", "fullstack"] }
dioxus-cli-config = { version = "0.7.0", optional = true }
dioxus-logger = { version = "0.7.0", optional = true }
mc-query = { version = "2", optional = true }
mime = { version = "0", optional = true }
poise = { version = "0", optional = true }
reqwest = { version = "0", features = ["json"] }
rust-i18n = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serenity = { version = "0", optional = true }
thiserror = { version = "2", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tower = { version = "0", features = ["full"], optional = true }
tower-http = { version = "0", features = ["full"], optional = true }
tracing = { version = "0", optional = true }
tracing-subscriber = { version = "0", features = ["env-filter"], optional = true }
url = { version = "2", optional = true }
uuid = { version = "1", features = ["v4"], optional = true }

[features]
default = ["web"]
# The feature that are only required for the web = ["dioxus/web"] build target should be optional and only enabled in the web = ["dioxus/web"] feature
web = ["dioxus/web"]
# The feature that are only required for the desktop = ["dioxus/desktop"] build target should be optional and only enabled in the desktop = ["dioxus/desktop"] feature
desktop = ["dioxus/desktop"]
# The feature that are only required for the mobile = ["dioxus/mobile"] build target should be optional and only enabled in the mobile = ["dioxus/mobile"] feature
mobile = ["dioxus/mobile"]
# The feature that are only required for the server = ["dioxus/server"] build target should be optional and only enabled in the server = ["dioxus/server"] feature
server = [
    "dioxus/server",
    "dep:axum",
    "dep:axum-extra",
    "dep:dioxus-cli-config",
    "dep:dioxus-logger",
    "dep:mc-query",
    "dep:mime",
    "dep:poise",
    "dep:serenity",
    "dep:tokio",
    "dep:tower",
    "dep:tower-http",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:url",
    "dep:uuid",
]
