[package]
name = "game_manager"
version = "0.1.0"
authors = ["Collin Diekvoss <Collin@Diekvoss.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7.0-rc.3", features = ["router", "fullstack"] }
oxford_join = "0"
reqwest = { version = "0", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["web"]
web = ["dioxus/web"]
server = ["dioxus/server"]
