[package]
name = "game_manager"
version = "0.1.0"
authors = ["Collin Diekvoss <Collin@Diekvoss.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
axum = { version = "0", optional = true }
axum-extra = { version = "0.9", features = ["cookie", "cookie-signed", "typed-header"], optional = true }
chrono = { version = "0", features = ["rkyv"] }
dioxus = { version = "0.7.0", features = ["router", "fullstack"] }
oxford_join = "0"
dioxus-cli-config = { version = "0.7.0", optional = true }
dioxus-logger = { version = "0.7.0", optional = true }
jsonwebtoken = { version = "10", features = ["aws_lc_rs"], optional = true }
mc-query = { version = "2", optional = true }
mime = { version = "0", optional = true }
rand = { version = "0.8", optional = true }
rsa = { version = "0", optional = true }
reqwest = { version = "0", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = { version = "2", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tower = { version = "0", features = ["full"], optional = true }
tower-http = { version = "0", features = ["full"], optional = true }
tracing = { version = "0", optional = true }
tracing-subscriber = { version = "0", features = ["env-filter"], optional = true }
url = { version = "2", optional = true }
uuid = { version = "1", features = ["v4"], optional = true }

[features]
default = ["web"]
# The feature that are only required for the web = ["dioxus/web"] build target should be optional and only enabled in the web = ["dioxus/web"] feature
web = ["dioxus/web"]
# The feature that are only required for the server = ["dioxus/server"] build target should be optional and only enabled in the server = ["dioxus/server"] feature
server = [
    "dioxus/server",
    "dep:axum",
    "dep:axum-extra",
    "dep:dioxus-cli-config",
    "dep:dioxus-logger",
    "dep:jsonwebtoken",
    "dep:mc-query",
    "dep:mime",
    "dep:rand",
    "dep:rsa",
    "dep:tokio",
    "dep:tower",
    "dep:tower-http",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:url",
    "dep:uuid",
]
