[package]
name = "mc_discord_bot"
version = "0.1.0"
authors = ["Collin Diekvoss <collin@diekvoss.com>"]
edition = "2021"
repository = "https://github.com/toyvo/mc_discord_bot"

[dependencies]
anyhow = "1"
axum = "0"
axum-extra = { version = "0", features = ["cookie-signed", "typed-header"] }
bytes = "1"
ed25519-dalek = "2"
http-body-util = "0"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0", features = ["full"] }
lib = { path = "../lib" }
mime = "0"
rand = "0"
reqwest = { version = "0", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serenity = { version = "0", features = ["interactions_endpoint"] }
time = { version = "0", features = ["macros", "serde"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0", features = ["util"] }
tower-http = { version = "0", features = ["fs", "trace", "timeout"] }
tracing = "0"
tracing-subscriber = { version = "0", features = ["env-filter"] }
url = "2"
uuid = { version = "1", features = ["v4"] }
